--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -59,9 +59,14 @@
   <ItemGroup>
     <Compile Include="Enumerations\GameTypeEnum.cs" />
     <Compile Include="Enumerations\PVPTypeEnum.cs" />
+    <Compile Include="GameObjects\CharacterClass.cs" />
+    <Compile Include="GameObjects\Conversation.cs" />
+    <Compile Include="GameObjects\Creature.cs" />
     <Compile Include="GameObjects\GameModule.cs" />
     <Compile Include="GameObjects\IGameObject.cs" />
+    <Compile Include="GameObjects\Item.cs" />
     <Compile Include="GameObjects\Map.cs" />
+    <Compile Include="GameObjects\Placeable.cs" />
     <Compile Include="GameObjects\Player.cs" />
     <Compile Include="GameObjects\Tile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
