--- a/Ceriyo/Ceriyo/app.config
+++ b/Ceriyo/Ceriyo/app.config
@@ -11,6 +11,8 @@
     <add key="GameFolder_Characters" value="Characters"/>
     <add key="GameFolder_EngineScripts" value="Scripts"/>
     
+    <add key="ToolsetFolder_WorkingDirectory" value="temp"/>
+    
     <add key="ModuleExtension" value="cmod"/>
     <add key="ModuleFolder_Maps" value="Maps"/>
     <add key="ModuleFolder_CharacterClasses" value="CharacterClasses"/>
