--- a/Ceriyo/Ceriyo/Ceriyo.csproj
+++ b/Ceriyo/Ceriyo/Ceriyo.csproj
@@ -65,6 +65,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Libraries\Xna4Pc\FlatRedBall.dll</HintPath>
     </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <Private>False</Private>
     </Reference>
@@ -118,9 +121,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Area.cs" />
-    <Compile Include="Entities\Area.Generated.cs">
-      <DependentUpon>Area.cs</DependentUpon>
+    <Compile Include="Entities\AreaEntity.cs" />
+    <Compile Include="Entities\AreaEntity.Generated.cs">
+      <DependentUpon>areaentity.cs</DependentUpon>
     </Compile>
     <Compile Include="GlobalContent.Generated.cs" />
     <Compile Include="Performance\IEntityFactory.Generated.cs" />
@@ -143,6 +146,7 @@
     <Content Include="Libraries\Javascript.NET\Noesis.Javascript.dll" />
     <Content Include="Libraries\Xna4Pc\FlatRedBall.Content.dll" />
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="redball.BMP">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
