--- a/Ceriyo.Toolset/Ceriyo.Toolset.csproj
+++ b/Ceriyo.Toolset/Ceriyo.Toolset.csproj
@@ -151,13 +151,13 @@
     <Compile Include="Components\MenuBarComponent.xaml.cs">
       <DependentUpon>MenuBarComponent.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ValidationRules\NameLengthVR.cs" />
-    <Compile Include="ValidationRules\NumericAmountVR.cs" />
-    <Compile Include="ValidationRules\ResrefLengthVR.cs" />
-    <Compile Include="ValidationRules\TagLengthVR.cs" />
-    <Compile Include="ValidationRules\TextLengthVR.cs" />
-    <Compile Include="ValidationRules\AreaHeightVR.cs" />
-    <Compile Include="ValidationRules\AreaWidthVR.cs" />
+    <Compile Include="ValidationRules\NameLengthRule.cs" />
+    <Compile Include="ValidationRules\NumericAmountRule.cs" />
+    <Compile Include="ValidationRules\ResrefLengthRule.cs" />
+    <Compile Include="ValidationRules\TagLengthRule.cs" />
+    <Compile Include="ValidationRules\TextLengthRule.cs" />
+    <Compile Include="ValidationRules\AreaHeightRule.cs" />
+    <Compile Include="ValidationRules\AreaWidthRule.cs" />
     <Compile Include="Windows\LoadModuleWindow.xaml.cs">
       <DependentUpon>LoadModuleWindow.xaml</DependentUpon>
     </Compile>
