--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Enumerations\NetworkAgentRoleEnum.cs" />
     <Compile Include="Enumerations\PVPTypeEnum.cs" />
     <Compile Include="Enumerations\ScriptEventTypeEnum.cs" />
-    <Compile Include="EventArguments\AreaEventArgs.cs" />
+    <Compile Include="EventArguments\GameObjectEventArgs.cs" />
     <Compile Include="EventArguments\ConnectionStatusEventArgs.cs" />
     <Compile Include="EventArguments\GameModuleEventArgs.cs" />
     <Compile Include="Extensions\SerializableDictionary.cs" />
