--- a/Ceriyo/Ceriyo/Ceriyo.csproj
+++ b/Ceriyo/Ceriyo/Ceriyo.csproj
@@ -125,14 +125,6 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\AreaEntity.cs" />
-    <Compile Include="Entities\AreaEntity.Generated.cs">
-      <DependentUpon>AreaEntity.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Entities\PlayerEntity.cs" />
-    <Compile Include="Entities\PlayerEntity.Generated.cs">
-      <DependentUpon>PlayerEntity.cs</DependentUpon>
-    </Compile>
     <Compile Include="GlobalContent.Generated.cs" />
     <Compile Include="Performance\IEntityFactory.Generated.cs" />
     <Compile Include="Performance\IPoolable.Generated.cs" />
@@ -140,10 +132,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Screens\BaseScreen.cs" />
-    <Compile Include="Screens\BaseScreen.Generated.cs">
-      <DependentUpon>BaseScreen.cs</DependentUpon>
-    </Compile>
     <Compile Include="Setup\CameraSetup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -194,6 +182,10 @@
     <ProjectReference Include="..\..\Ceriyo.Data\Ceriyo.Data.csproj">
       <Project>{26e4c8b8-a8c4-4b77-bec7-e6149473eefb}</Project>
       <Name>Ceriyo.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Ceriyo.Entities\Ceriyo.Entities.csproj">
+      <Project>{7af76229-44cd-410a-ac56-2160a22adef9}</Project>
+      <Name>Ceriyo.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Ceriyo.Library\Ceriyo.Library.csproj">
       <Project>{f9ab9dd8-a342-4d58-bbb9-e15184e7f522}</Project>
