Resource Pack creator

--- a/Ceriyo.Toolset/Ceriyo.Toolset.csproj
+++ b/Ceriyo.Toolset/Ceriyo.Toolset.csproj
@@ -177,6 +177,9 @@
     <Compile Include="Windows\ModulePropertiesWindow.xaml.cs">
       <DependentUpon>ModulePropertiesWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\ResourcePackEditorWindow.xaml.cs">
+      <DependentUpon>ResourcePackEditorWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\ScriptEditorWindow.xaml.cs">
       <DependentUpon>ScriptEditorWindow.xaml</DependentUpon>
     </Compile>
@@ -261,6 +264,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Windows\ModulePropertiesWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ResourcePackEditorWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
