--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Engine\EngineConstants.cs" />
     <Compile Include="Engine\EngineDataManager.cs" />
     <Compile Include="Engine\EnginePaths.cs" />
+    <Compile Include="Engine\ResourcePackDataManager.cs" />
     <Compile Include="Engine\WorkingDataManager.cs" />
     <Compile Include="Engine\WorkingPaths.cs" />
     <Compile Include="Enumerations\GameTypeEnum.cs" />
@@ -111,6 +112,7 @@
     <Compile Include="GameObjects\Tileset.cs" />
     <Compile Include="Packets\PacketBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceObjects\ResourceEditorItem.cs" />
     <Compile Include="Settings\GameSettings.cs" />
     <Compile Include="Settings\ServerSettings.cs" />
     <Compile Include="Settings\ToolsetSettings.cs" />
@@ -123,6 +125,7 @@
     <Compile Include="ViewModels\ModulePropertiesVM.cs" />
     <Compile Include="ViewModels\ObjectSelectionVM.cs" />
     <Compile Include="ViewModels\PaintObjectsVM.cs" />
+    <Compile Include="ViewModels\ResourceEditorVM.cs" />
     <Compile Include="ViewModels\ScriptSelectionVM.cs" />
     <Compile Include="ViewModels\ToolsetVM.cs" />
   </ItemGroup>
