--- a/Ceriyo.Toolset/Ceriyo.Toolset.csproj
+++ b/Ceriyo.Toolset/Ceriyo.Toolset.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Windows\EditPlaceableWindow.xaml.cs">
       <DependentUpon>EditPlaceableWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\ManageResourcePacksWindow.xaml.cs">
+      <DependentUpon>ManageResourcePacksWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\ModulePropertiesWindow.xaml.cs">
       <DependentUpon>ModulePropertiesWindow.xaml</DependentUpon>
     </Compile>
@@ -260,6 +263,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Windows\EditPlaceableWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\ManageResourcePacksWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
