--- a/Ceriyo.Toolset/Ceriyo.Toolset.csproj
+++ b/Ceriyo.Toolset/Ceriyo.Toolset.csproj
@@ -168,8 +168,8 @@
     <Compile Include="Windows\EditItemWindow.xaml.cs">
       <DependentUpon>EditItemWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Windows\EditModuleWindow.xaml.cs">
-      <DependentUpon>EditModuleWindow.xaml</DependentUpon>
+    <Compile Include="Windows\NewModuleWindow.xaml.cs">
+      <DependentUpon>NewModuleWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\EditPlaceableWindow.xaml.cs">
       <DependentUpon>EditPlaceableWindow.xaml</DependentUpon>
@@ -258,7 +258,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\EditModuleWindow.xaml">
+    <Page Include="Windows\NewModuleWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
