Genericized FRBGameComponent, added TilePicker screen

--- a/Ceriyo.Library/Ceriyo.Library.csproj
+++ b/Ceriyo.Library/Ceriyo.Library.csproj
@@ -107,6 +107,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Content\Icons\" />
     <Folder Include="Content\Settings\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
