--- a/Ceriyo.Data/Ceriyo.Data.csproj
+++ b/Ceriyo.Data/Ceriyo.Data.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Engine\EngineConstants.cs" />
     <Compile Include="Engine\EngineDataManager.cs" />
     <Compile Include="Engine\EnginePaths.cs" />
+    <Compile Include="Engine\GameResourceProcessor.cs" />
     <Compile Include="Engine\ResourcePackDataManager.cs" />
     <Compile Include="Engine\WorkingDataManager.cs" />
     <Compile Include="Engine\WorkingPaths.cs" />
